crash-reporter (1.9.2-0) unstable; urgency=low

  * Fixes: NB#235438 - Crash reporter title doesnt fit int portrait
  * Fixes: NB#235430 - "!! crash reporter " is not localized

 -- Raimo Gratseff <ext-raimo.gratseff@nokia.com>  Fri, 11 Mar 2011 10:50:41 +0200

crash-reporter (1.9.1-0) unstable; urgency=low

  * Fixes: NB#224878 - Source packages still generating -docs packages for arm targets
  * Moved a notification bug workaround from dialogserver main to crnotification
  
 -- Carol Rus <ext-carol.rus@nokia.com>  Thu, 10 Mar 2011 17:27:00 +0200

crash-reporter (1.9.0-0) unstable; urgency=low

  * Fixes: NB#227742 - MNotification issues
  * Fixes: NB#225764 - Unreadable fonts in crash reporter
  * Some notification and dialog problems were fixed
  * UI styling was greatly improved

 -- Raimo Gratseff <ext-raimo.gratseff@nokia.com>  Mon, 28 Feb 2011 13:42:21 +0200

crash-reporter (1.8.5-0) unstable; urgency=low

  * Fixes: NB#216440 - Remove custom style sheets
  * Fixes: NB#215804 - segmentation faults in CReporterDialogServerPrivate::processRequests()

 -- Raimo Gratseff <ext-raimo.gratseff@nokia.com>  Mon, 10 Jan 2011 16:53:23 +0200

crash-reporter (1.8.4-0) unstable; urgency=low

  * Fixes: NB#209214 - toggling "Send crash reports automatically" hangs settings ui

 -- Raimo Gratseff <ext-raimo.gratseff@nokia.com>  Tue, 07 Dec 2010 13:36:48 +0200

crash-reporter (1.8.3-0) unstable; urgency=low

  * Fixed a bug in system tests that sometimes caused false results

 -- Raimo Gratseff <ext-raimo.gratseff@nokia.com>  Thu, 02 Dec 2010 13:39:47 +0200

crash-reporter (1.8.2-0) unstable; urgency=low

  * Fixes: NB#207473 - libcrashreporter using deprecated component MInfoBanner

 -- Raimo Gratseff <ext-raimo.gratseff@nokia.com>  Fri, 26 Nov 2010 16:33:14 +0200

crash-reporter (1.8.1-0) unstable; urgency=low

  * Fixes: NB#204809 - [FEA] Version information to Crash Reporter UI
  * Fixes a race condition issue in dialog server which has caused segfaults